# BGV-Homomorphic-Encryption

./: .MODULE.bazel.kate-swp  MODULE.bazel  README.md  WORKSPACE
BeaverTriple/: .triple.h.kate-swp  main.cc  triple.h
PAHE/: ExperimentSetting.txt  HashInput.cpp  HashInput.h  PAHE.cpp  PAHE.h  PAHEHelper.cpp  PAHEHelper.h  PolynomialRing.cpp  PolynomialRing.h  RandomGenerator.cpp  RandomGenerator.h  TestHashInput.cpp  TestNTT.cpp  TestPAHE.cpp  TestPolynomialRing.cpp  TestUtils.cpp  Timer.h  buildoutput.txt  utils.cpp  utils.h
amd64.gmu/: add.s  defines.inc  mult.s  script.sh  sub.s
crypto/: prng.h
maths/: .generate_primes.cpp.kate-swp  FindMaxBucketSize.cpp  HashInput.cpp  HashInput.h  a.out  bucket  generate_primes  generate_primes.cpp  generate_root_of_unity  generate_root_of_unity.cpp  get_max_bucket_size.cpp  utils.cpp  utils.h
network/: IPManager.hpp  Machine.hpp  Network.hpp
network/machine_spec/: 3.txt  4.txt
psu/: IPManager.hpp  MPC.hpp  Machine.hpp  Network.hpp  PSU  PSU.cpp  PSU.h  main.cc  testPSU.sh
psu/machine_spec/: 1.txt  16.txt  2.txt  8.txt
src/main/cc/integer/: .integer.h.kate-swp  integer.h
src/main/cc/maths/: BUILD.bazel  big_num.h  generate_primes.cc  generate_primes.h  generate_root_of_unity.cc  hash_input.cc  hash_input.h  polynomial_interpolation.cc  polynomial_interpolation.h
src/main/proto/polynomial/: BUILD.bazel  polynomial.proto
src/test/cc/maths/: BUILD.bazel  generate_primes_test.cc  polynomial_interpolation_test.cc
testing/: .NTT.cpp.kate-swp  .TestPSU.cpp.kate-swp  BGVTest.cpp  BGVTest.h  NTT.cpp  PAHE.sh  PAHE_test.cc  TestPSU.cpp  a.out  asmCorrectTest.sh  assemblyModulo  assemblyModulo.cpp  benchmark  benchmark.cpp  benchmark.sh  polynomial  polynomial.sh  random_generator_test.cc  random_generator_test.sh  testPAHE  testPAHE.cpp  testPolynomial.cpp  testUtils.cpp  testUtils.h
testing/crypto/: prng_test.cc  prng_test.sh
utils/: Timer.h
