# MODULE.bazel

bazel_dep(
    name = "abseil-cpp",
    version = "20230802.1",
    repo_name = "com_google_absl",
)


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "wfa_common_cpp",
    sha256 = "9d1af10e9e878d8b960a655710b37b362c9f6ffbd21eaa637f07bbfa682fdc0a",
    strip_prefix = "common-cpp-0651afeac32d42c3c30f0b04c45b74d32f493114",
    url = "https://github.com/world-federation-of-advertisers/common-cpp/archive/0651afeac32d42c3c30f0b04c45b74d32f493114.zip",
)
