load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "generate_primes",
    srcs = ["generate_primes.cc"],
    hdrs = ["generate_primes.h"],
    linkopts = [
        "-lntl",
        "-lgmp",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
)

cc_library(
    name = "generate_root_of_unity",
    srcs = ["generate_root_of_unity.cc"],
    linkopts = [
        "-lntl",
        "-lgmp",
    ],
)

cc_library(
    name = "hash_input",
    srcs = ["hash_input.cc"],
    hdrs = ["hash_input.h"],
    linkopts = [
        "-lntl",
        "-lgmp",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
)

cc_library(
    name = "polynomial_interpolation",
    srcs = ["polynomial_interpolation.cc"],
    hdrs = ["polynomial_interpolation.h"],
    linkopts = [
        "-lntl",
        "-lgmp",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)
