load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "polynomial_interpolation_test",
    size = "small",
    srcs = [
        "polynomial_interpolation_test.cc",
    ],
    deps = [
        "//src/main/cc/maths:polynomial_interpolation",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "generate_primes_test",
    size = "small",
    srcs = [
        "generate_primes_test.cc",
    ],
    deps = [
        "//src/main/cc/maths:generate_primes",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

